# GeneralizedBasisReduction

./: .gitignore  CMakeLists.txt  README.md  example.lp  example.txt  run.sh  settingsfile.set
src/: main.cpp
